feat: handle only commits in merge update, add in memory cache for storing gitlab last commmits and asana task ids
