# cmd/hooks/main.go
@@ -42,7 +42,7 @@ func main() {
 
 	cfg, err := api.LoadConfig()
 	if err != nil {
-		log.Fatal().Err(err).Msg("Failed to load config")
+		log.Info().Err(err).Msg("Failed to load config")
 	}
 
 	baseAPI := r.Group("/api/v1")
@@ -51,7 +51,6 @@ func main() {
 	baseAPI.GET("/ping", ping)
 	asanaHooks := baseAPI.Group("/asana")
 	asanaHooks.POST("/merge", gitlab.MergeRequestAsana)
-	asanaHooks.POST("/push", gitlab.PushRequestAsana)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	if err = r.Run(":80"); err != nil {
